force-app/main/default/objects/Milestone__c/fields/Number_Of_Sub_MileStone_Records__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Sub_MileStone_Records__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number Of Sub-MileStone Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>