force-app/main/default/objects/Milestone__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project_Name__c</referenceTo>
    <relationshipLabel>Milestone</relationshipLabel>
    <relationshipName>Milestone</relationshipName>
    <type>Lookup</type>
</CustomField>