force-app/main/default/objects/Milestone__c/fields/Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>Resource_Name__c</fullName>
    <description>To capture resource name</description>
    <label>Resource Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>