force-app/main/default/objects/Milestone__c/fields/Total_No_Of_Tasks_Under_Sub_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Total_No_Of_Tasks_Under_Sub_Milestone__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total No Of Tasks Under Sub-Milestone</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>