force-app/main/default/objects/Milestone__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Milestone</fullName>
            </value>
            <value>
                <fullName>Sub-Milestone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>