force-app/main/default/objects/Milestone__c/validationRules/ect_start_date_and_ect_end_date.validationRule-meta.xml
<ValidationRule>
    <fullName>ect_start_date_and_ect_end_date</fullName>
    <active>true</active>
    <errorConditionFormula>IF(  Actual_Start_Date__c   &gt;   Actual_End_Date__c  , true, false)</errorConditionFormula>
    <errorDisplayField>Actual_End_Date__c</errorDisplayField>
    <errorMessage>Expected End Date should not be greater than Expected Start Date !!</errorMessage>
</ValidationRule>