force-app/main/default/objects/Milestone__c/validationRules/on_status_complete_date_should_not_null.validationRule-meta.xml
<ValidationRule>
    <fullName>on_status_complete_date_should_not_null</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISPICKVAL( Status__c , &apos;Completed&apos;) ,  ISBLANK( Expected_Start_Date__c )  , false)</errorConditionFormula>
    <errorDisplayField>Expected_Start_Date__c</errorDisplayField>
    <errorMessage>Actual Start Date should not be blank for status as &apos;Completed&apos; !!</errorMessage>
</ValidationRule>