force-app/main/default/objects/Milestone__c/validationRules/on_status_complete_date_should_not_null2.validationRule-meta.xml
<ValidationRule>
    <fullName>on_status_complete_date_should_not_null2</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISPICKVAL( Status__c , &apos;Completed&apos;) ,  ISBLANK(  Expected_End_Date__c  )  , false)</errorConditionFormula>
    <errorDisplayField>Expected_End_Date__c</errorDisplayField>
    <errorMessage>Actual End Date should not be blank for status as &apos;Completed&apos; !!</errorMessage>
</ValidationRule>